@@ -1,3 +1,8 @@
+Tue Dec  1 17:13:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_string_value_cstr): should not raise on frozen
+	  string.
+
 Tue Dec  1 09:35:29 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* missing/explicit_bzero.c: add a few comment.
